Rewrite in order to use the  HttpClient instead of URLConnection
* renamed URLSeekableByteChannel to HttpSeekableByteChannel
* changed some error cases to report UnsupportedOperation instead of AccessDenied
* throw on cases where a file subrange was requested but the server returns the entire file instead
  this is allowed but it would be complicated for us to handle
* some associated refactoring